# sea-orm-tracing

./: .gitignore  Cargo.toml  LICENSE  LICENSE-MIT  README.md
examples/: axum.rs  basic.rs
src/: config.rs  connection.rs  lib.rs  parser.rs
