[package]
name = "sea-orm-tracing"
version = "0.2.0"
edition = "2021"
authors = ["Benjamen Pyle"]
description = "OpenTelemetry-compatible tracing instrumentation for SeaORM database operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/benbpyle/sea-orm-tracing"
documentation = "https://docs.rs/sea-orm-tracing"
readme = "README.md"
keywords = ["sea-orm", "tracing", "opentelemetry", "database", "instrumentation"]
categories = ["database", "development-tools::debugging", "development-tools::profiling"]

[dependencies]
sea-orm = { version = "1.1", default-features = false }
tracing = "0.1"
async-trait = "0.1"
regex = "1.10"
once_cell = "1.19"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

[features]
default = []
# Include row count tracking (slight overhead)
row-counts = []

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "axum"
path = "examples/axum.rs"
